WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35197
Fix compiler warning "suggest parentheses around"
https://bugs.webkit.org/show_bug.cgi?id=35197
Summary
Fix compiler warning "suggest parentheses around"
Laszlo Gombos
Reported
2010-02-20 14:29:10 PST
WebCore/html/DateComponents.cpp: In function ‘bool WebCore::beforeGregorianStartDate(int, int, int)’: WebCore/html/DateComponents.cpp:148: warning: suggest parentheses around ‘&&’ within ‘||’ WebCore/html/DateComponents.cpp:149: warning: suggest parentheses around ‘&&’ within ‘||’ WebCore/plugins/PluginDatabase.cpp: In member function ‘WebCore::PluginPackage* WebCore::PluginDatabase::findPlugin(const WebCore::KURL&, WebCore::String&)’: WebCore/plugins/PluginDatabase.cpp:261: warning: suggest parentheses around assignment used as truth value
Attachments
proposed patch
(2.12 KB, patch)
2010-02-20 15:45 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
fix for WML code
(1.32 KB, patch)
2010-02-22 06:50 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2010-02-20 15:45:43 PST
Created
attachment 49137
[details]
proposed patch
WebKit Commit Bot
Comment 2
2010-02-20 21:22:48 PST
Comment on
attachment 49137
[details]
proposed patch Clearing flags on attachment: 49137 Committed
r55058
: <
http://trac.webkit.org/changeset/55058
>
WebKit Commit Bot
Comment 3
2010-02-20 21:22:52 PST
All reviewed patches have been landed. Closing bug.
Laszlo Gombos
Comment 4
2010-02-22 06:32:57 PST
Reopen as I found one more of these. WebCore/wml/WMLVariables.cpp: In function 'WebCore::String WebCore::substituteVariableReferences(const WebCore::String&, WebCore::Document*, WebCore::WMLVariableEscapingMode)': WebCore/wml/WMLVariables.cpp:254: warning: suggest parentheses around assignment used as truth value I'm somewhat surprised that these warnings do not show up/disabled for other ports.
Laszlo Gombos
Comment 5
2010-02-22 06:50:17 PST
Created
attachment 49213
[details]
fix for WML code
WebKit Commit Bot
Comment 6
2010-02-22 09:25:41 PST
Comment on
attachment 49213
[details]
fix for WML code Clearing flags on attachment: 49213 Committed
r55087
: <
http://trac.webkit.org/changeset/55087
>
WebKit Commit Bot
Comment 7
2010-02-22 09:25:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug