2010-02-20  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Darin Adler.

        Fix compiler warning "suggest parentheses around"
        https://bugs.webkit.org/show_bug.cgi?id=35197

        No new tests as there is no new functionality.

        * html/DateComponents.cpp:
        (WebCore::beforeGregorianStartDate):
        * plugins/PluginDatabase.cpp:
        (WebCore::PluginDatabase::findPlugin):

Canonical link: https://commits.webkit.org/46363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55058 268f45cc-cd09-0410-ab3c-d52691b4dbfc